# DP-S4S

./: .gitignore  Dockerfile  Readme.md  mosek.lic  pyproject.toml
info/a2q/q1/: Q9_stackoverflow_a2q_processed_0  Q9_stackoverflow_a2q_processed_1  Q9_stackoverflow_a2q_processed_2  Q9_stackoverflow_a2q_processed_3  Q9_stackoverflow_a2q_processed_4  Q9_stackoverflow_a2q_processed_5  Q9_stackoverflow_a2q_processed_6  Q9_stackoverflow_a2q_processed_7  Q9_stackoverflow_a2q_processed_8  Q9_stackoverflow_a2q_processed_9
info/a2q/q2/: Q10_stackoverflow_a2q_processed_0  Q10_stackoverflow_a2q_processed_1  Q10_stackoverflow_a2q_processed_2  Q10_stackoverflow_a2q_processed_3  Q10_stackoverflow_a2q_processed_4  Q10_stackoverflow_a2q_processed_5  Q10_stackoverflow_a2q_processed_6  Q10_stackoverflow_a2q_processed_7  Q10_stackoverflow_a2q_processed_8  Q10_stackoverflow_a2q_processed_9
info/a2q/q3/: Q14_stackoverflow_a2q_processed_0  Q14_stackoverflow_a2q_processed_1  (+8 more)
info/amazon1/: l1.txt  l2.txt  rectangle.txt  time.txt  triangle.txt
info/amazon2/: l1.txt  l2.txt  rectangle.txt  time.txt  triangle.txt
info/deezer/: l1.txt  l2.txt  rectangle.txt  time.txt  triangle.txt
info/roadnetca/: l1.txt  l2.txt  rectangle.txt  time.txt  triangle.txt
scripts/: count_graph.py  docker_entrypoint.sh  load_graph.py  load_labeled_graph.py  load_tpch.py  query_graph.py  query_labeled_graph.py  query_tpch.py  run.py  run.sh  run_algorithms_docker.sh  run_mq.sh
src/: Dataset.py  DatasetMultipleQuery.py  NoiseGen.py  PMSJA.py  R2T.py  S4SS.py  S4SV.py  Smooth.py  main.py  main_mq.py
(+2615 files in other folders)
