[tool.poetry]
name = "dp-s4s"
version = "0.1.0"
description = "Experiments for DP-S4S."
authors = ["Annonymous"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
